--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
     }
 }
@@ -23,4 +23,5 @@ dependencies {
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.android.support:design:25.3.1'
 }
