--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -15,13 +15,15 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:$androidSupportVersion"
-    compile "com.android.support:support-v13:$androidSupportVersion"
-    compile "com.android.support:appcompat-v7:$androidSupportVersion"
-    compile "com.android.support:palette-v7:$androidSupportVersion"
-    compile "com.android.support:recyclerview-v7:$androidSupportVersion"
-    compile "com.android.support:cardview-v7:$androidSupportVersion"
+    compile "com.android.support:support-v4:25.3.1"
+    compile "com.android.support:support-v13:25.3.1"
+    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support:palette-v7:25.3.1"
+    compile "com.android.support:recyclerview-v7:25.3.1"
+    compile "com.android.support:cardview-v7:25.3.1"
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
